# data-retrieval-system

./: .gitignore  .mergify.yml  LICENSE  README.md  compose.yaml  lefthook.yml  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  turbo.json
apps/web/: .cta.json  (+7 more)
db/: justfile  mise.toml  package.json  pyproject.toml  pyrefly.toml
db/dbt/: dbt_project.yml  packages.yml  profiles.yml
db/dbt/macros/: create_index.sql  generate_schema_name.sql  test_hex_color.sql  test_iso_alpha2_country_code.sql
db/dbt/models/marts/effone/: README.md  _effone__models.yml  circuits.sql  constructor_season_summaries.sql  constructor_standings_snapshots.sql  constructors.sql  driver_season_summaries.sql  driver_standings_snapshots.sql  drivers.sql  fastest_laps.sql  pit_stops.sql  qualifying_results.sql  race_results.sql  races.sql  seasons.sql  sprint_results.sql
db/dbt/models/staging/f1db/: _f1db__models.yml  _f1db__sources.yml  stg_f1db__circuit.sql  stg_f1db__constructor.sql  stg_f1db__country.sql  stg_f1db__driver.sql  stg_f1db__fastest_lap.sql  stg_f1db__grand_prix.sql  stg_f1db__pit_stop.sql  stg_f1db__qualifying_result.sql  stg_f1db__race.sql  stg_f1db__race_constructor_standing.sql  stg_f1db__race_driver_standing.sql  stg_f1db__race_result.sql  stg_f1db__season.sql  (+3 more)
db/dbt/schema-draft/: dimensions.sql  facts.sql  indexes.sql  summaries.sql
db/dbt/seeds/: _seeds.yml  constructor_branding.csv
db/migrations/: 00001_effone_infrastructure.sql  00002_effone_dimensions.sql  00005_effone_indexes.sql
db/scripts/: README.md  build.py  load.py  task.py
(+177 files in other folders)
